--- a/.eslintrc
+++ b/.eslintrc
@@ -1,28 +1,26 @@
 {
   "extends": [
     "eslint:recommended",
-    "plugin:import/errors",
+    "plugin:import/typescript",
     "plugin:react/recommended",
     "plugin:jsx-a11y/recommended",
     "plugin:react-hooks/recommended",
     "plugin:@typescript-eslint/recommended",
-    "plugin:@typescript-eslint/recommended-requiring-type-checking",
     "prettier"
   ],
-  "rules": {
-    "react/prop-types": 0,
-    "react/react-in-jsx-scope": 0
-  },
-  "plugins": ["react", "import", "jsx-a11y", "@typescript-eslint"],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
-    "ecmaVersion": 2022,
-    "sourceType": "module",
-    "project": "tsconfig.json",
     "ecmaFeatures": {
       "jsx": true
-    }
+    },
+    "ecmaVersion": "latest",
+    "sourceType": "module"
   },
+  "rules": {
+    "react/prop-types": "off",
+    "react/react-in-jsx-scope": "off"
+  },
+  "plugins": ["react", "import", "jsx-a11y", "@typescript-eslint"],
   "env": {
     "es6": true,
     "browser": true,
