--- a/package.json
+++ b/package.json
@@ -15,15 +15,19 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@types/lodash": "^4.14.190",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-bootstrap": "^2.6.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.3"
   },
   "devDependencies": {
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
-    "@vitejs/plugin-react": "^2.2.0",
     "@typescript-eslint/eslint-plugin": "5.40.1",
     "@typescript-eslint/parser": "5.40.1",
+    "@vitejs/plugin-react": "^2.2.0",
     "eslint": "8.24.0",
     "eslint-config-prettier": "8.5.0",
     "eslint-import-resolver-typescript": "^3.5.1",
@@ -33,6 +37,8 @@
     "eslint-plugin-react-hooks": "4.6.0",
     "prettier": "2.7.1",
     "typescript": "^4.6.4",
-    "vite": "^3.2.3"
+    "vite": "^3.2.3",
+    "vite-plugin-eslint": "^1.8.1",
+    "vite-tsconfig-paths": "^3.6.0"
   }
 }
