--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.1",
     "@types/lodash": "^4.14.190",
+    "camelcase-keys": "^8.0.2",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
