--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/lodash": "^4.14.190",
     "camelcase-keys": "^8.0.2",
     "lodash": "^4.17.21",
+    "nanoid": "^4.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
     "react-dom": "^18.2.0",
